test/language/spec/multireturn/invalid/too_many_returns.topo
// TEST: multi-return with only one return parameter
// EXPECT-ERROR: at least 2

using Int = std::cpp17::int32_t;

namespace app {
  public:
    compute(Int x) -> (Int only);
}
